--- a/Genie/Templates/Infrastructure/Models/Relation.tt
+++ b/Genie/Templates/Infrastructure/Models/Relation.tt
@@ -46,11 +46,42 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
 <#}#>
     }
 
-	public class <#=name#>QueryContext : BaseQueryContext<<#=name#>QueryContext>
+	public class <#=name#>QueryContext
 	{
 		private <#=name#>FilterContext _where; 
 	    private <#=name#>OrderContext _order;
 		private readonly <#=name#>Repository _repo;
+
+        private int? _page;
+        private int? _pageSize;
+        private int? _limit;
+        private int? _skip;
+        private int? _take;
+
+        public <#=name#>QueryContext Page(int pageSize, int page)
+        {
+            _page = page;
+            _pageSize = pageSize;
+            return this;
+        }
+
+        public <#=name#>QueryContext Top(int limit)
+        {
+            _limit = limit;
+            return this;
+        }
+
+        public <#=name#>QueryContext Skip(int skip)
+        {
+            _skip = skip;
+            return this;
+        }
+
+        public <#=name#>QueryContext Take(int take)
+        {
+            _take = take;
+            return this;
+        }
 		
 		internal <#=name#>QueryContext(<#=name#>Repository repo) { _repo = repo; }
 		
@@ -61,6 +92,11 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
 	    public IEnumerable<<#=name#>> Query(IDbTransaction transaction = null)
 	    {
 	        return _repo.Get("[dbo].[<#=name#>]", _where?.GetFilterExpressions(), _order?.GetOrderExpressions(), _pageSize, _page, _limit, _skip, _take, transaction);
+	    }
+
+	    public int Count(IDbTransaction transaction = null)
+	    {
+	        return _repo.Count("[dbo].[<#=name#>]", _where?.GetFilterExpressions(), _order?.GetOrderExpressions(), _pageSize, _page, _limit, _skip, _take, transaction);
 	    }
 	}
 
@@ -79,6 +115,9 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
 <#}else if(atd.DataType == "DateTime" || atd.DataType == "DateTime?"){#>
     	private DateFilter<<#=name#>FilterContext,<#=name#>QueryContext> <#=atd.FieldName#>;
 		public DateFilter<<#=name#>FilterContext,<#=name#>QueryContext> <#=atd.Name#> { get { return <#=atd.FieldName#> ?? ( <#=atd.FieldName#> = new DateFilter<<#=name#>FilterContext,<#=name#>QueryContext>("<#=atd.Name#>", this, _queryContext)); } }
+<#}else if(atd.DataType == "bool" || atd.DataType == "bool?"){#>
+    	private BoolFilter<<#=name#>FilterContext,<#=name#>QueryContext> <#=atd.FieldName#>;
+		public BoolFilter<<#=name#>FilterContext,<#=name#>QueryContext> <#=atd.Name#> { get { return <#=atd.FieldName#> ?? ( <#=atd.FieldName#> = new BoolFilter<<#=name#>FilterContext,<#=name#>QueryContext>("<#=atd.Name#>", this, _queryContext)); } }
 <#}#>
 <#}#>
 	}
