--- a/Genie/Templates/Infrastructure/Repository.tt
+++ b/Genie/Templates/Infrastructure/Repository.tt
@@ -104,5 +104,10 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
             }
             return items;
         }		
+
+        internal virtual int Count(string targetName, Queue<string> where, Queue<string> order, int? pageSize = null, int? page = null, int? limit = null, int? skip = null, int? take = null, IDbTransaction transaction = null)
+        {
+            return Conn.Count(targetName, where, order, pageSize, page, limit, skip, take, transaction);
+        }
     }
 }
