Check null in Procedures

--- a/Genie/Templates/Infrastructure/UnitOfWork.tt
+++ b/Genie/Templates/Infrastructure/UnitOfWork.tt
@@ -21,7 +21,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
         <#}#>
 
         <#foreach(var view in _schema.Views){
-      #>public <#=view.Name#>Repository <#=view.FieldName#>Repository;
+      #>private <#=view.Name#>Repository <#=view.FieldName#>Repository;
         <#}#>
 
 
